@@ -115,6 +115,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Iterator
 import|;
 end_import
@@ -6319,12 +6329,122 @@ expr_stmt|;
 block|}
 else|else
 block|{
+comment|// get all partitions of the table
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|partitionNames
+init|=
+name|db
+operator|.
+name|getPartitionNames
+argument_list|(
+name|MetaStoreUtils
+operator|.
+name|DEFAULT_DATABASE_NAME
+argument_list|,
+name|dropTbl
+operator|.
+name|getTableName
+argument_list|()
+argument_list|,
+operator|(
+name|short
+operator|)
+operator|-
+literal|1
+argument_list|)
+decl_stmt|;
+name|Set
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
+name|partitions
+init|=
+operator|new
+name|HashSet
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|partitionNames
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+try|try
+block|{
+name|partitions
+operator|.
+name|add
+argument_list|(
+name|Warehouse
+operator|.
+name|makeSpecFromName
+argument_list|(
+name|partitionNames
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|MetaException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Unrecognized partition name from metastore: "
+operator|+
+name|partitionNames
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 comment|// drop partitions in the list
 name|List
 argument_list|<
 name|Partition
 argument_list|>
-name|parts
+name|partsToDelete
 init|=
 operator|new
 name|ArrayList
@@ -6349,48 +6469,123 @@ name|getPartSpecs
 argument_list|()
 control|)
 block|{
-name|Partition
+name|Iterator
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|>
+name|it
+init|=
+name|partitions
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+while|while
+condition|(
+name|it
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
 name|part
 init|=
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+comment|// test if partSpec matches part
+name|boolean
+name|match
+init|=
+literal|true
+decl_stmt|;
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|item
+range|:
+name|partSpec
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+operator|!
+name|item
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|part
+operator|.
+name|get
+argument_list|(
+name|item
+operator|.
+name|getKey
+argument_list|()
+argument_list|)
+argument_list|)
+condition|)
+block|{
+name|match
+operator|=
+literal|false
+expr_stmt|;
+break|break;
+block|}
+block|}
+if|if
+condition|(
+name|match
+condition|)
+block|{
+name|partsToDelete
+operator|.
+name|add
+argument_list|(
 name|db
 operator|.
 name|getPartition
 argument_list|(
 name|tbl
 argument_list|,
-name|partSpec
+name|part
 argument_list|,
 literal|false
 argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|part
-operator|==
-literal|null
-condition|)
-block|{
-name|console
-operator|.
-name|printInfo
-argument_list|(
-literal|"Partition "
-operator|+
-name|partSpec
-operator|+
-literal|" does not exist."
 argument_list|)
+expr_stmt|;
+name|it
+operator|.
+name|remove
+argument_list|()
 expr_stmt|;
 block|}
-else|else
-block|{
-name|parts
-operator|.
-name|add
-argument_list|(
-name|part
-argument_list|)
-expr_stmt|;
 block|}
 block|}
 comment|// drop all existing partitions from the list
@@ -6399,7 +6594,7 @@ control|(
 name|Partition
 name|partition
 range|:
-name|parts
+name|partsToDelete
 control|)
 block|{
 name|console
