@@ -247,6 +247,9 @@ Trunk -  Unreleased
     HIVE-910. NULL value is not correctly handled by ColumnarStruct
     (He Yongqiang via namit)
 
+    HIVE-804 Support deletion of partitions based on a prefix partition spefication
+    (Zheng Shao via namit)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
